Bug 476696 - Ctrl+Shift++ doesn't work. It's supposed to unfold but it increases font size instead.
Summary: Ctrl+Shift++ doesn't work. It's supposed to unfold but it increases font size...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: folding (other bugs)
Version First Reported In: 23.08.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-07 23:49 UTC by Abdulmalek Almkainzi
Modified: 2023-12-23 04:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Abdulmalek Almkainzi 2023-11-07 23:49:46 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. fold with Ctrl+Shift+-
2. try to unfold with Ctrl+Shift++ and it wont work
3. unfold by going to view->code folding->unfold and it will work

OBSERVED RESULT
increase font size

EXPECTED RESULT
unfold

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Christoph Cullmann 2023-12-18 18:58:22 UTC
Yeah, that just clashes with the other shortcut.
Comment 2 Bug Janitor Service 2023-12-18 19:04:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/648
Comment 3 Christoph Cullmann 2023-12-18 20:10:00 UTC
Git commit 8f3d5f7983ef24139a2df25f9689fa585182e0a8 by Christoph Cullmann.
Committed on 18/12/2023 at 20:02.
Pushed by cullmann into branch 'master'.

remove shortcut that clashes with font size change

M  +0    -10   src/view/kateview.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/8f3d5f7983ef24139a2df25f9689fa585182e0a8