remove shortcut that clashes with font size change

BUG: 476696